# yolov7_and_tensorrt-cpp-inference

./: CMakeLists.txt  README.md  edit_yolov7_cpp.cpp  requirements.txt
cfg/training/: yolov7_custom.yaml
data/: custom.yaml
export_ONNX_with_BatchedNMS/: yolov7_add_nms.py  yolov7_add_postprocess.py
tensorrt_cpp_inference/: yolov7.cpp  yolov7.h
useful_python_codes/: json2yolo(txt).py  split_files_to_train-val-folders.py  txt_for_images.py
